--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
-    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
-    "mongoose": "^7.4.0",
-    "winston": "^3.10.0"
+    "mongoose": "^7.4.0"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
