--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^7.4.0"
   },
   "devDependencies": {
