--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Secure Password Manager for Teams",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
