--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "package": "node scripts/package.js"
   },
   "dependencies": {
+    "@microsoft/teams-js": "^2.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
@@ -20,6 +22,7 @@
     "mongoose": "^7.8.7"
   },
   "devDependencies": {
+    "archiver": "^7.0.1",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1"
