--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.16/MicrosoftTeams.schema.json",
     "manifestVersion": "1.16",
-    "version": "2.1.1",
+    "version": "2.1.4",
     "id": "f29f2aa1-355e-422b-acba-516c168ae3b5",
     "packageName": "com.globiq.teams.passwordmanager",
     "developer": {
@@ -12,20 +12,29 @@
     },
     "name": {
         "short": "Password Manager",
-        "full": "GlobiQ Password Manager AUTO-LOGIN v2.1.1"
+        "full": "GlobiQ Password Manager"
     },
     "description": {
-        "short": "Secure password manager with automatic Teams authentication",
-        "full": "Enterprise password manager for Teams with AUTO-LOGIN functionality - no login barriers, automatic Teams SSO authentication, direct dashboard access with fallback to demo mode."
+        "short": "Secure password manager with Teams authentication",
+        "full": "Enterprise password manager for Teams with automatic login functionality"
     },
     "icons": {
         "outline": "outline.png",
         "color": "color.png"
     },
     "accentColor": "#800000",
+    "configurableTabs": [
+        {
+            "configurationUrl": "https://password-manager-for-teams.onrender.com/config.html",
+            "canUpdateConfiguration": true,
+            "scopes": [
+                "team"
+            ]
+        }
+    ],
     "staticTabs": [
         {
-            "entityId": "passwordManager",
+            "entityId": "index",
             "name": "Password Manager",
             "contentUrl": "https://password-manager-for-teams.onrender.com",
             "websiteUrl": "https://password-manager-for-teams.onrender.com",
@@ -34,37 +43,10 @@
             ]
         }
     ],
-    "configurableTabs": [
-        {
-            "configurationUrl": "https://password-manager-for-teams.onrender.com/config.html",
-            "canUpdateConfiguration": true,
-            "scopes": [
-                "team",
-                "groupchat"
-            ]
-        }
-    ],
     "permissions": [
-        "identity",
-        "messageTeamMembers"
+        "identity"
     ],
     "validDomains": [
-        "password-manager-for-teams.onrender.com",
-        "*.onrender.com",
-        "globiq.com"
-    ],
-    "authorization": {
-        "permissions": {
-            "resourceSpecific": [
-                {
-                    "name": "TeamSettings.Read.Group",
-                    "type": "Application"
-                }
-            ]
-        }
-    },
-    "webApplicationInfo": {
-        "id": "f29f2aa1-355e-422b-acba-516c168ae3b5",
-        "resource": "https://password-manager-for-teams.onrender.com"
-    }
+        "password-manager-for-teams.onrender.com"
+    ]
 }
