--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "lint": "eslint .",
-    "package": "node scripts/package.js"
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "@microsoft/teams-js": "^2.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
@@ -22,9 +18,6 @@
     "mongoose": "^7.8.7"
   },
   "devDependencies": {
-    "archiver": "^7.0.1",
-    "eslint": "^8.45.0",
-    "jest": "^29.6.1",
     "nodemon": "^3.0.1"
   },
   "engines": {
