--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "globiq-password-manager",
   "version": "1.0.0",
-  "description": "Secure Password Manager for Teams",
-  "main": "src/server.js",
+  "description": "Secure Password Manager for Teams",  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
