--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "globiq-password-manager",
   "version": "1.0.0",
-  "description": "Secure Password Manager for Teams",  "main": "server.js",  "scripts": {
+  "description": "Secure Password Manager for Teams",
+  "main": "server.js",
+  "license": "MIT",
+  "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "nodemon server.js",
     "build": "echo 'No build step required'",
@@ -10,7 +13,6 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
