--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "globiq-password-manager",
   "version": "1.0.0",
-  "description": "Secure Password Manager for Teams",
+  "description": "Secure Password Manager",
   "main": "server.js",
   "license": "MIT",
   "scripts": {
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
